fixed social icons alignment

--- a/css/style-single-page.css
+++ b/css/style-single-page.css
@@ -61,7 +61,7 @@ ul.social-icons li {
 	margin: 10px;
 }
 ul.social-icons li:first-child {
-	margin-left: 7.2em;
+	margin-left: 1.4em;
 	width: 55em;
 	text-align: left;
 }
